k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nucleus-system
  labels:
    name: nucleus-system
